--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,11 @@ td {
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
+nav {
+  background-color: aliceblue;
+  padding: 16px 32px;
+}
+nav a {
+  margin-right: 16px;
+}
