--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-nav {
+.primaryNav {
   background-color: aliceblue;
   padding: 16px 32px;
 }
